fix: issue with wrapping components for angular (#848)

--- a/packages/components/src/styles/db-ui-components.scss
+++ b/packages/components/src/styles/db-ui-components.scss
@@ -19,20 +19,36 @@
 
 // angular-workaround
 dbalert,
+db-alert,
 dbcodedocs,
+db-codedocs,
 dbbrand,
+db-brand,
 dbbutton,
+db-button,
 dbcard,
+db-card,
 dbdivider,
+db-divider,
 dbdrawer,
+db-drawer,
 dbheader,
+db-header,
 dbicon,
+db-icon,
 dbinfotext,
+db-infotext,
 dbinput,
+db-input,
 dblink,
+db-link,
 dbpage,
+db-page,
 dbsection,
+db-section,
 dbtab,
-dbtabbar {
+db-tab,
+dbtabbar,
+db-tabbar {
 	display: contents;
 }
